--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,11 @@ body {
     padding: 2rem;
 }
 
+.container h1{
+    font-size: 5rem;
+    text-align: center;
+}
+
 .container .jinx {
     position: absolute;
     right: 0;
@@ -19,10 +24,9 @@ body {
 }
 
 .container .resultado {
-    display: none;
     background-color: rgb(5, 74, 96);
-    max-width: 400px;
-    padding: 1.1rem;
+    width: 100%;
+    padding: 1rem;
     margin: 2rem auto;
     border-radius: 20px;
     
@@ -31,9 +35,13 @@ body {
     font-weight: 500;
 }
 
+.container .esconder {
+    display: none;
+}
+
 .container .resultado span {
     color: rgb(159, 215, 249);
-    font-size: 1.8rem;
+    font-size: 3rem;
 }
 
 .container-main {
@@ -61,28 +69,34 @@ body {
     padding: 20px;
 }
 
+.container-main .container-perguntas .cartoes .selecionado {
+    box-shadow: 2px 2px 20px rgb(255, 255, 255), -2px -2px 20px rgb(255, 255, 255);
+}
+
 .container-main .container-perguntas .cartoes .cartao {
-    background-color: rgb(5, 74, 96);
+    background-color: rgb(22, 97, 98);
     width: 140px;
     margin-bottom: 1rem;
-    border-radius: 5%;
-    transition: .3s ease-in-out;    
+    border-radius: 20% 20% 5% 5%;
+    padding: 3px;
+    transition: .3s ease-in-out;
+    cursor: pointer;
 }
 
 .container-main .container-perguntas .cartoes .cartao:hover {
     scale: 1.05;
-    cursor: pointer;
 }
 
 .container-main .container-perguntas .cartoes .cartao p {
     text-align: center;
-    padding: 5px;
+    margin-bottom: 5px;
 }
 
 .container-main .container-perguntas .cartoes .cartao img {
     width: 100%;
-    border-radius: 10% 10% 0 0;
-    padding: 10px;
+    height: 80%;
+    cursor: pointer;
+    border-radius: 20% 20% 0 0;
 }
 
 .container-main button {
